app/assets/stylesheets/base/layout.scss
* {
	font-size: 20px;
	font-family: 'Ubuntu', sans-serif;
}

body {
	margin: 0;
	padding: 0;
}

.btn-info {
	float: right;
	margin-right: 10%;
	margin-top: 25px;
	margin-bottom: 130px;
	padding: 6px 12px 6px;
	font-weight: 700;
	background-color: rgba(0, 96, 191, 0.1);
	border-color: transparent;
	border-radius: 3px;
	color: rgba(0, 0, 0, 0.5);
	text-align: center;
	text-decoration: none;
	cursor: pointer
}

.session-form-container {
	width: 100%;
	display: flex;
	justify-content: center;
}

.session-form-box {
	width: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
}

.session-form {
	display: flex;
	justify-content: center;
	flex-direction: column;
}

.session-form-input {
	width: 400px;
	height: 40px;
	padding-left: 10px;
	border-radius: 3px;
	border: 1px solid #ccc
}


.session-create-button, .input[type=submit], .session-delete-button {
	height: 36px;
	color: azure;
	background:#49b3f4;
	border:0 none;
	cursor:pointer;
	border-radius: 5px;
}

.session-create-button:hover, .input[type=submit]:hover, .session-delete-button:hover {
	background-color:#3ea3df;
}

.btn-info:hover {
	background-color: rgba(#0060bf, 0.15)
}

// homepage

.homepage {
	display:grid;
	grid-template-rows: 1fr 8fr 1fr;
	grid-template-areas:
	 	"header"
		"img"
		"footer";


	header {
		grid-area: header;
		display: flex;
		justify-content: space-between;
		align-items: center;
	}

	h1 {
		display: inline-block;
		font-size: 30px;
		font-family: 'Permanent Marker', cursive;
		margin: 0;
		margin-left: 10%;

	}

	nav {
		grid-area: nav;
		display: inline-block;
		margin-right: 10%;
	}

	img {
		grid-area: img;
		width: 100%;
		height: 100%;
		background-color: #d2e4fd;
	}

	footer {
		grid-area: footer;
		display: flex;
		align-items: center;
		flex-direction: column;
	}

	h2, a, sub {
		font-family: 'Permanent Marker', cursive;
		color: black;
		text-decoration: none;
	}
}


// task page
.task-index {
	display: grid;
	grid-template-columns: 1fr 3fr 2fr;
	grid-template-rows: 1fr 1fr 17.98fr;
	grid-gap: .6rem;

	grid-template-areas:
	 	"header header header"
		"nav 		form 	 aside"
		"nav    ul     aside";

	background-color: #bfdce8;

	header {
		grid-area: header;
	}

	nav {
		grid-area: nav;
	}

	form {
		grid-area: form;

		hr {
			width: 95%;
			margin: 0;
			margin-bottom: 7px;
			margin-left: 2.5%;
		}

		div {
			display: flex;
			align-items: center;
		}
	}

	ul {
		grid-area: ul;
		padding-left: 0px
	}

	aside {
		grid-area: aside;
		background: azure;
		border: none;
		border-radius: 4px;
		margin-right: 12px;
		margin-bottom: 12px;

		.task-detail-title {
			width: 100%;
			font-weight: bold;
			font-size: 30px;
			padding-top: 15px;
			margin-left: 5px;
			margin-bottom: 5px;
		}

		label {
			display: flex;
			align-items: flex-start;
			display: inline-block;
			padding-left: 20px;

			input {
				display:inline-block;
			}
		}

		textarea {
			border: none;
			display: inline-block;
			background-color: transparent;
			padding: 0;
			padding-left: 10px;
			width: 75%;
		}

		.update-task {
			border-radius: 4px;
			cursor: pointer;
			color: azure;
			background:#49b3f4;
			border: none;
			margin-left: 2.5%;
			height: 35px;
		}

		input[type="submit"] {
			width: 95%
		}

		a {
			position:absolute; bottom: 22px;
			margin-left: 12px;
			border-radius: 4px;
			cursor: pointer;
			color: azure;
			background:#49b3f4;
			border: none;
			padding: 1px 7px 1px 7px;
			text-decoration: none;
		}

		button {
			position: absolute; right: 24px;
			position: absolute;bottom: 22px;
			border-radius: 4px;
			cursor: pointer;
			color: azure;
			background:#49b3f4;
			border: none;
		}

		button:hover, a:hover, .update-task:hover {
			background-color:#3ea3df;
		}
	}


	li {
		display: flex;
		align-items: center;
		justify-content: space-between;
		background: azure;
		border: none;
		list-style: none;
		height: 46px;
		border-radius: 4px;
		margin-bottom: 3px;
	}

	.task-index-link {
		text-decoration: none;
		color: black
	}

	input {
		border: none;
		background: transparent;
		padding-left: 10px;
	}

	.add-task-input {
		background: azure;
		border: none;
		border-radius: 4px;
		padding-left: 10px;
		width:100%;
		height: 46px;
	}

	span {
		margin-left: 10px;
		margin-right: 25px;
	}
}

